# qruakpit

./: .gitignore  LICENSE  LICENSE-quakpit  NOTICE  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs  overlay.rs  scheduler.rs  store.rs  tray.rs
src-tauri/src/calendar/: eventkit.rs  google.rs  ical.rs  icloud.rs  mod.rs  oauth_loopback.rs  types.rs
src/overlay/: OverlayApp.tsx  main.tsx  overlay.css
src/settings/: SettingsApp.tsx  main.tsx  settings.css
src/shared/: flier-assets.ts  fliers.ts  fonts.ts  invoke.ts  sounds.ts  themes.ts  types.ts
