[package]
name = "qruakpit"
version = "0.1.0"
description = "A duck-in-a-plane meeting reminder that flies across your screen. Rust + Tauri fork of QuakPit."
authors = ["JP Wesselink"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "qruakpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["apple-native"] }
oauth2 = "4"
icalendar = "0.16"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "1"
log = "0.4"
url = "2"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
dirs = "5"
anyhow = "1"
sha2 = "0.10"
open = "5"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
quick-xml = { version = "0.36", features = ["serialize"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
block = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
